syntax = "proto3";
package builder;

service Builder {
  // Build an archive
  rpc build(BuildRequest) returns (BuildResponse);
}

message BuildRequest {
  string deployment_id = 1;
  bytes archive = 2;
}

message BuildResponse {
  bytes image = 1;
  bool is_wasm = 2;

  message Secret {
    string key = 1;
    string value = 2;
  }

  repeated Secret secrets = 3;
}
