syntax = "proto3";
package logger;

import "google/protobuf/timestamp.proto";

service Logger {
  // Store logs
  rpc StoreLogs(StoreLogsRequest) returns (StoreLogsResponse);

  // Get stored logs
  rpc GetLogs(LogsRequest) returns (LogsResponse);

  // Get fresh logs as they are incoming
  rpc GetLogsStream(LogsRequest) returns (stream FetchedLogItem);
}

message StoreLogsRequest {
  repeated StoredLogItem logs = 1;
}

message StoreLogsResponse {
  bool success = 1;
}

message LogsRequest {
  string deployment_id = 1;
}

message LogsResponse {
  repeated FetchedLogItem log_items = 1;
}

message StoredLogItem {
  string service_name = 1;
  string deployment_id = 2;
  google.protobuf.Timestamp tx_timestamp = 3;
  bytes data = 4;
}

message FetchedLogItem {
  string service_name = 1;
  google.protobuf.Timestamp tx_timestamp = 2;
  bytes data = 3;
}
